# cobot_magic

./: .gitmodules  LICENSE  readme.md
aloha-devel/: requirements.txt
aloha-devel/act/: inference.py  policy.py  train.py  train.sh  utils.py
aloha-devel/act/detr/: main.py
aloha-devel/act/detr/models/: __init__.py  backbone.py  detr_vae.py  position_encoding.py  transformer.py
camera_ws/src/realsense_camera/: CMakeLists.txt  package.xml  readme.md
camera_ws/src/realsense_camera/launch/: d435.launch  mutil_camera.launch  nodelet.xml
camera_ws/src/realsense_camera/src/: list_device_camera.cpp
camera_ws/src/ros_astra_camera/: CMakeLists.txt
camera_ws/src/ros_astra_camera/launch/: astra.launch  dabai.launch  dabai_dcw.launch  dabai_u3.launch  multi_camera.launch
camera_ws/src/ros_astra_camera/src/: list_devices_node.cpp
collect_data/: collect_data.py  replay_data.py  requirements.txt  visualize_episodes.py
collect_data/docs/: collect_data.py  env.sh  env2.sh  test.sh
tools/: arm_serial.sh  arx_can.rules  build.sh  camera_serial.sh  can.sh  cobot_magic_env.sh
